--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -14,5 +14,7 @@
       <span class="badge">{{hero.id}}</span>
       {{hero.name}}
     </a>
+    <button class="delete" title="delete hero"
+  (click)="delete(hero)">X</button>
   </li>
 </ul>
